syntax = "proto3";

import "buf/validate/validate.proto";

option go_package = "github.com/jadwalapp/symmetrical-spoon/falak/pkg/gen/proto/auth/v1;authv1";

package auth.v1;

message InitiateEmailRequest {
    string email = 1 [(buf.validate.field) = {
        string: {
            pattern: "^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$",
            max_len: 320,
        },
    }];
}

message InitiateEmailResponse {}

message CompleteEmailRequest {
    string token = 1 [(buf.validate.field).string.uuid = true];
}

message CompleteEmailResponse {
    string access_token = 1;
}

message UseGoogleRequest {
    string google_token = 1 [(buf.validate.field).string.uuid = true];
}

message UseGoogleResponse {
    string access_token = 1;
}

service AuthService {
    rpc InitiateEmail(InitiateEmailRequest) returns (InitiateEmailResponse);
    rpc CompleteEmail(CompleteEmailRequest) returns (CompleteEmailResponse);
    rpc UseGoogle(UseGoogleRequest) returns (UseGoogleResponse);
}